--- a/DemoApp/MainPage.xaml
+++ b/DemoApp/MainPage.xaml
@@ -1,21 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DemoApp.MainPage">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:markupextension="clr-namespace:DemoApp.Common.MarkupExtension"
+             x:Class="DemoApp.MainPage" BackgroundColor="Black">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Button" x:Key="ButtonStyle">
-                <Setter Property="BackgroundColor" Value="Orange"/>
+                <Setter Property="BackgroundColor" Value="Transparent"/>
                 <Setter Property="TextTransform" Value="None"/>
                 <Setter Property="FontSize" Value="14"/>
                 <Setter Property="TextColor" Value="White"/>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <Grid ColumnDefinitions="350,*" ColumnSpacing="10"
+    <Grid ColumnDefinitions="350,*" ColumnSpacing="10" Margin="0,0,0,0"
           BackgroundColor="White" HorizontalOptions="Fill" VerticalOptions="Fill">
         <Grid RowDefinitions="Auto,*" RowSpacing="0" BackgroundColor="Blue">
-             <ScrollView Grid.Column="0" x:Name="controlScroll" VerticalOptions="Fill" BackgroundColor="Blue">
+            <Image Source="{markupextension:EmbeddedImageResource thuonghieugogihouse.png}" HeightRequest="240"
+                   HorizontalOptions="Fill" VerticalOptions="Start" BackgroundColor="Black"/>
+            <ScrollView Grid.Column="0" x:Name="controlScroll" VerticalOptions="Fill" BackgroundColor="Blue" Grid.Row="1">
                  <StackLayout VerticalOptions="Fill">
 
                  </StackLayout>
@@ -35,9 +37,9 @@
             <CollectionView BackgroundColor="Aqua" Grid.Row="1">
 
             </CollectionView>
-            <Grid VerticalOptions="End" ColumnSpacing="0" HorizontalOptions="End" 
-                  Grid.Row="1" WidthRequest="400" Margin="0,20">
-                <Label VerticalOptions="Fill" HorizontalOptions="Fill" BackgroundColor="Orange" HorizontalTextAlignment="Center"
+            <Grid VerticalOptions="End" ColumnSpacing="0" HorizontalOptions="End" ColumnDefinitions="*,1,*"
+                  Grid.Row="1" WidthRequest="500" Margin="0,20" BackgroundColor="Orange">
+                <Label VerticalOptions="Fill" HorizontalOptions="Fill" BackgroundColor="Transparent" HorizontalTextAlignment="Center"
                        VerticalTextAlignment="Center" TextColor="White" Grid.Column="0">
                     <Label.FormattedText>
                         <FormattedString>
@@ -46,7 +48,8 @@
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Button Text="^_^" Style="{StaticResource ButtonStyle}" Grid.Column="1"/>
+                <BoxView VerticalOptions="Center" Grid.Column="1" Color="White" Margin="0,15" CornerRadius="1"/>
+                <Button Text="^_^" Style="{StaticResource ButtonStyle}" Grid.Column="2"/>
             </Grid>
         </Grid>
     </Grid>
