--- a/DemoApp/MainPage.xaml
+++ b/DemoApp/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DemoApp.MainPage">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:markupextension="clr-namespace:DemoApp.Common.MarkupExtension" 
+             xmlns:behaviors="http://xamarin.com/schemas/2020/toolkit" xmlns:demoapp="clr-namespace:DemoApp"
+             x:Class="DemoApp.MainPage" x:Name="currentPage">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Button" x:Key="ButtonStyle">
@@ -10,44 +11,67 @@
                 <Setter Property="FontSize" Value="14"/>
                 <Setter Property="TextColor" Value="White"/>
             </Style>
+
+            <DataTemplate x:Key="detail">
+                <Label Text="{Binding detail}" FontAttributes="Italic" Margin="20,0" BackgroundColor="{Binding BgItem}" behaviors:TouchEffect.Command="{Binding BindingContext.DetailCmd,Source={Reference currentPage}}" behaviors:TouchEffect.CommandParameter="{Binding .}">
+                </Label>
+            </DataTemplate>
+
         </ResourceDictionary>
     </ContentPage.Resources>
-    <Grid ColumnDefinitions="350,*" ColumnSpacing="10"
+
+    <ContentPage.Content>
+        <Grid ColumnDefinitions="350,*" ColumnSpacing="10"
           BackgroundColor="White" HorizontalOptions="Fill" VerticalOptions="Fill">
-        <Grid RowDefinitions="Auto,*" RowSpacing="0" BackgroundColor="Blue">
-             <ScrollView Grid.Column="0" x:Name="controlScroll" VerticalOptions="Fill" BackgroundColor="Blue">
-                 <StackLayout VerticalOptions="Fill">
-
-                 </StackLayout>
-             </ScrollView>
-        </Grid>
-
-        <Grid Grid.Column="1" RowDefinitions="Auto,*" RowSpacing="0">
-            <StackLayout HorizontalOptions="Fill" BackgroundColor="Black" HeightRequest="80" Padding="20">
-                <Frame HorizontalOptions="Start" VerticalOptions="Center" Padding="20,10"
-                       BackgroundColor="Aqua" CornerRadius="10">
-                    <StackLayout Orientation="Horizontal" VerticalOptions="Center">
-                        <BoxView HeightRequest="50" WidthRequest="50" CornerRadius="25" Color="Yellow"/>
-                        <Label Text="Nhan vien abcef" VerticalOptions="Center"/>
+            <Grid RowDefinitions="Auto,*" RowSpacing="0" BackgroundColor="LightGoldenrodYellow">
+                <Image Grid.Row="0" Source="{markupextension:EmbeddedImageResource thuonghieugogihouse.png}" HeightRequest="100" HorizontalOptions="Fill" Aspect="AspectFill"/>
+                <ScrollView Grid.Row="1" x:Name="controlScroll" VerticalOptions="Fill" BackgroundColor="#aeaeae">
+                    <StackLayout VerticalOptions="Fill" BindableLayout.ItemsSource="{Binding MMain}">
+                        <BindableLayout.ItemTemplate>
+                            <DataTemplate>
+                                <behaviors:Expander ExpandAnimationEasing="CubicIn" ExpandAnimationLength="500" CollapseAnimationEasing="CubicOut" CollapseAnimationLength="500" IsExpanded="True">
+                                    <behaviors:Expander.Header>
+                                        <Label Text="{Binding Name}" FontAttributes="Bold" FontSize="Medium"/>
+                                    </behaviors:Expander.Header>
+                                    <behaviors:Expander.ContentTemplate>
+                                        <DataTemplate>
+                                            <StackLayout VerticalOptions="Fill" BindableLayout.ItemsSource="{Binding Details}" BindableLayout.ItemTemplate="{StaticResource detail}"/>
+                                        </DataTemplate>
+                                    </behaviors:Expander.ContentTemplate>
+                                </behaviors:Expander>
+                            </DataTemplate>
+                        </BindableLayout.ItemTemplate>
                     </StackLayout>
-                </Frame>
-            </StackLayout>
-            <CollectionView BackgroundColor="Aqua" Grid.Row="1">
+                </ScrollView>
+            </Grid>
 
-            </CollectionView>
-            <Grid VerticalOptions="End" ColumnSpacing="0" HorizontalOptions="End" 
+            <Grid Grid.Column="1" RowDefinitions="Auto,*" RowSpacing="0">
+                <StackLayout HorizontalOptions="Fill" BackgroundColor="Black" HeightRequest="80" Padding="20">
+                    <Frame HorizontalOptions="Start" VerticalOptions="Center" Padding="20,10"
+                       BackgroundColor="Aqua" CornerRadius="10">
+                        <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+                            <BoxView HeightRequest="50" WidthRequest="50" CornerRadius="25" Color="Yellow"/>
+                            <Label Text="Nhan vien abcef" VerticalOptions="Center"/>
+                        </StackLayout>
+                    </Frame>
+                </StackLayout>
+                <CollectionView BackgroundColor="Aqua" Grid.Row="1">
+
+                </CollectionView>
+                <Grid VerticalOptions="End" ColumnSpacing="0" HorizontalOptions="End" 
                   Grid.Row="1" WidthRequest="400" Margin="0,20">
-                <Label VerticalOptions="Fill" HorizontalOptions="Fill" BackgroundColor="Orange" HorizontalTextAlignment="Center"
+                    <Label VerticalOptions="Fill" HorizontalOptions="Fill" BackgroundColor="Orange" HorizontalTextAlignment="Center"
                        VerticalTextAlignment="Center" TextColor="White" Grid.Column="0">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span Text="Bàn "/>
-                            <Span Text="115"/>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Button Text="^_^" Style="{StaticResource ButtonStyle}" Grid.Column="1"/>
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="Bàn "/>
+                                <Span Text="115"/>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+                    <Button Text="^_^" Style="{StaticResource ButtonStyle}" Grid.Column="1"/>
+                </Grid>
             </Grid>
         </Grid>
-    </Grid>
+    </ContentPage.Content>
 </ContentPage>
