--- a/DemoApp/MainPage.xaml
+++ b/DemoApp/MainPage.xaml
@@ -34,8 +34,8 @@
                     </StackLayout>
                 </Frame>
             </StackLayout>
-            <CollectionView BackgroundColor="Aqua" Grid.Row="1">
-
+            <CollectionView BackgroundColor="Aqua" Grid.Row="1" ItemsLayout="VerticalGrid, 2">
+                
             </CollectionView>
             <Grid VerticalOptions="End" ColumnSpacing="0" HorizontalOptions="End" ColumnDefinitions="*,1,*"
                   Grid.Row="1" WidthRequest="500" Margin="0,20" BackgroundColor="Orange">
