--- a/DemoApp/MainPage.xaml
+++ b/DemoApp/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:markupextension="clr-namespace:DemoApp.Common.MarkupExtension" 
-             xmlns:behaviors="http://xamarin.com/schemas/2020/toolkit" xmlns:demoapp="clr-namespace:DemoApp"
+             xmlns:behaviors="http://xamarin.com/schemas/2020/toolkit"
              x:Class="DemoApp.MainPage" x:Name="currentPage" BackgroundColor="Black">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -13,16 +13,14 @@
             </Style>
 
             <DataTemplate x:Key="detail">
-                <Label Text="{Binding detail}" FontAttributes="Italic" Margin="20,0" BackgroundColor="{Binding BgItem}" behaviors:TouchEffect.Command="{Binding BindingContext.DetailCmd,Source={Reference currentPage}}" behaviors:TouchEffect.CommandParameter="{Binding .}">
-                </Label>
+                <StackLayout BackgroundColor="{Binding BgItem}" behaviors:TouchEffect.Command="{Binding BindingContext.DetailCmd,Source={Reference currentPage}}" behaviors:TouchEffect.CommandParameter="{Binding .}">
+                    <Label Text="{Binding detail}" FontAttributes="Italic" Margin="20,0"/>
+                </StackLayout>
             </DataTemplate>
 
             <DataTemplate x:Key="collection">
                 <Grid BackgroundColor="AliceBlue">
-                    
-                    <Image Source="{Binding HinhMonAn}" Aspect="AspectFit" HorizontalOptions="Fill" HeightRequest="100"  >
-
-                    </Image>
+                    <Image Source="{Binding HinhMonAn}" Aspect="AspectFit" HorizontalOptions="Fill" HeightRequest="500"/>
                     <StackLayout Grid.Column="1">
                         <Label Text="{Binding Tittle}"/>
                         <Label Text="{Binding Price}"/>
@@ -68,9 +66,8 @@
                         </StackLayout>
                     </Frame>
                 </StackLayout>
-                <CollectionView BackgroundColor="Aqua" Grid.Row="1" ItemsLayout="VerticalGrid, 2" ItemTemplate="{StaticResource collection}" ItemsSource="{Binding MMonAn}">
-
-                </CollectionView>
+                <CollectionView BackgroundColor="Aqua" Grid.Row="1" ItemsLayout="VerticalGrid, 2" ItemTemplate="{StaticResource collection}" ItemsSource="{Binding MMonAn}" 
+                                RemainingItemsThresholdReached="CollectionView_RemainingItemsThresholdReached" RemainingItemsThreshold="1"/>
                 <Grid VerticalOptions="End" ColumnSpacing="0" HorizontalOptions="End" ColumnDefinitions="*,1,*"
                   Grid.Row="1" WidthRequest="500" Margin="0,20" BackgroundColor="Orange">
                     <Label VerticalOptions="Fill" HorizontalOptions="Fill" BackgroundColor="Transparent" HorizontalTextAlignment="Center"
