--- a/DemoApp/Views/Popup/OderPage.xaml
+++ b/DemoApp/Views/Popup/OderPage.xaml
@@ -3,7 +3,7 @@
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
     xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
     xmlns="http://xamarin.com/schemas/2014/forms" CloseWhenBackgroundIsClicked="True" BackgroundColor="Transparent"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:xct="http://xamarin.com/schemas/2020/toolkit" xmlns:controls="clr-namespace:DemoApp.Controls"
     x:Class="DemoApp.Views.Popup.OderPage" SystemPaddingSides="Top">
     <pages:PopupPage.Animation>
         <animations:MoveAnimation
@@ -25,18 +25,34 @@
             </Style>
         </ResourceDictionary>
     </pages:PopupPage.Resources>
-   <Grid HorizontalOptions="End" x:Name="Contentgird">
-       <xct:TabView TabStripPlacement="Top" TabStripBackgroundColor="Black" TabStripHeight="96"
+    <Grid HorizontalOptions="End" x:Name="Contentgird">
+        <xct:TabView TabStripPlacement="Top" TabStripBackgroundColor="Black" TabStripHeight="96"
                     TabIndicatorHeight="5" TabIndicatorColor="Orange">
-           <xct:TabViewItem TabIndex="0" Text="Món đang gọi" TextColor="White" FontSize="20" TextColorSelected="Orange"
+            <xct:TabViewItem TabIndex="0" Text="Món đang gọi" TextColor="White" FontSize="20" TextColorSelected="Orange"
                             FontAttributes="Bold" FontAttributesSelected="Bold" FontSizeSelected="20">
-                <Grid VerticalOptions="Fill" BackgroundColor="Black" Padding="0,48,0,0">
-                    <BoxView Color="White"/>
+                <Grid RowDefinitions="Auto,*" Padding="0,48,0,0" BackgroundColor="White" RowSpacing="0">
+                    <Grid ColumnDefinitions="6*,1*,1.5*" BackgroundColor="Black" Padding="0,20" VerticalOptions="Start">
+                        <Label Text="Tên món" Style="{StaticResource Title}"/>
+                        <Label Text="S/L" Style="{StaticResource Title}"  Grid.Column="1"/>
+                        <Label Text="Đơn giá" Style="{StaticResource Title}" Grid.Column="2"/>
+                    </Grid>
+                    <CollectionView Grid.Row="1" ItemsSource="{Binding Ordering}">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid ColumnDefinitions="6*,1*,1.5*" BackgroundColor="Black" Padding="0,20"
+                                      VerticalOptions="Start">
+                                    <Label Text="{Binding Tittle}" Style="{StaticResource Title}"/>
+                                    <controls:StepperControl Grid.Column="1" Value="{Binding SoLuong}" TapEvent="StepperControl_TapEvent" TextColorValue="AliceBlue"/>
+                                    <Label Text="{Binding Price}" Style="{StaticResource Title}" Grid.Column="2"/>
+                                </Grid>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
                 </Grid>
-           </xct:TabViewItem>
+            </xct:TabViewItem>
             <xct:TabViewItem TabIndex="1" Text="Món đã gọi" TextColor="White" FontSize="20" TextColorSelected="Orange"
                              FontAttributes="Bold" FontAttributesSelected="Bold" FontSizeSelected="20">
-               <Grid RowDefinitions="Auto,*" Padding="0,48,0,0" BackgroundColor="White" RowSpacing="0">
+                <Grid RowDefinitions="Auto,*" Padding="0,48,0,0" BackgroundColor="White" RowSpacing="0">
                     <Grid ColumnDefinitions="6*,1*,1.5*,1.5*" BackgroundColor="Black" Padding="0,20"
                               VerticalOptions="Start">
                         <Label Text="Tên món" Style="{StaticResource Title}"/>
@@ -44,21 +60,21 @@
                         <Label Text="Đơn giá" Style="{StaticResource Title}" Grid.Column="2"/>
                         <Label Text="Ra món" Style="{StaticResource Title}" Grid.Column="3"/>
                     </Grid>
-                    <CollectionView Grid.Row="1">
+                    <CollectionView Grid.Row="1" ItemsSource="{Binding Ordered}">
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
                                 <Grid ColumnDefinitions="6*,1*,1.5*,1.5*" BackgroundColor="Black" Padding="0,20"
                                       VerticalOptions="Start">
-                                    <Label Text="Tên món" Style="{StaticResource Title}"/>
-                                    <Label Text="S/L" Style="{StaticResource Title}"  Grid.Column="1"/>
-                                    <Label Text="Đơn giá" Style="{StaticResource Title}" Grid.Column="2"/>
+                                    <Label Text="{Binding Tittle}" Style="{StaticResource Title}"/>
+                                    <Label Text="{Binding SoLuong}" Style="{StaticResource Title}"  Grid.Column="1"/>
+                                    <Label Text="{Binding Price}" Style="{StaticResource Title}" Grid.Column="2"/>
                                     <Label Text="Ra món" Style="{StaticResource Title}" Grid.Column="3"/>
                                 </Grid>
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
                     </CollectionView>
                 </Grid>
-           </xct:TabViewItem>
-       </xct:TabView>
+            </xct:TabViewItem>
+        </xct:TabView>
     </Grid>
 </pages:PopupPage>
