--- a/DemoApp/Views/Popup/OderPage.xaml
+++ b/DemoApp/Views/Popup/OderPage.xaml
@@ -23,14 +23,21 @@
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
                 <Setter Property="VerticalTextAlignment" Value="Center"/>
             </Style>
+
+            <Style TargetType="Button" x:Key="ButtonStyle">
+                <Setter Property="BackgroundColor" Value="Transparent"/>
+                <Setter Property="TextTransform" Value="None"/>
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="TextColor" Value="White"/>
+            </Style>
         </ResourceDictionary>
     </pages:PopupPage.Resources>
     <Grid HorizontalOptions="End" x:Name="Contentgird">
         <xct:TabView TabStripPlacement="Top" TabStripBackgroundColor="Black" TabStripHeight="96"
-                    TabIndicatorHeight="5" TabIndicatorColor="Orange">
+                    TabIndicatorHeight="5" TabIndicatorColor="Orange" SelectionChanged="TabView_SelectionChanged">
             <xct:TabViewItem TabIndex="0" Text="Món đang gọi" TextColor="White" FontSize="20" TextColorSelected="Orange"
                             FontAttributes="Bold" FontAttributesSelected="Bold" FontSizeSelected="20">
-                <Grid RowDefinitions="Auto,*" Padding="0,48,0,0" BackgroundColor="White" RowSpacing="0">
+                <Grid RowDefinitions="Auto,*,Auto" Padding="0,48,0,0" BackgroundColor="White" RowSpacing="0">
                     <Grid ColumnDefinitions="6*,1*,1.5*" BackgroundColor="Black" Padding="0,20" VerticalOptions="Start">
                         <Label Text="Tên món" Style="{StaticResource Title}"/>
                         <Label Text="S/L" Style="{StaticResource Title}"  Grid.Column="1"/>
@@ -42,12 +49,17 @@
                                 <Grid ColumnDefinitions="6*,1*,1.5*" BackgroundColor="Black" Padding="0,20"
                                       VerticalOptions="Start">
                                     <Label Text="{Binding Tittle}" Style="{StaticResource Title}"/>
-                                    <controls:StepperControl Grid.Column="1" Value="{Binding SoLuong}" TapEvent="StepperControl_TapEvent" TextColorValue="AliceBlue"/>
+                                    <Label Grid.Column="1" Text="{Binding SoLuong}" Style="{StaticResource Title}"/>
+                                    <!--<controls:StepperControl Grid.Column="1" Value="{Binding SoLuong}" TapEvent="StepperControl_TapEvent" TextColorValue="AliceBlue"/>-->
                                     <Label Text="{Binding Price}" Style="{StaticResource Title}" Grid.Column="2"/>
                                 </Grid>
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
                     </CollectionView>
+                    <Grid HeightRequest="80" VerticalOptions="End" Grid.Row="1">
+                        <Button Style="{StaticResource ButtonStyle}" Text="Huy" BackgroundColor="Red" Command="{Binding HuyMonCmd}"/>
+                        <Button Style="{StaticResource ButtonStyle}" Text="Xac Nhan" BackgroundColor="Green" Command="{Binding XacNhanMonCmd}" Grid.Column="1"/>
+                    </Grid>
                 </Grid>
             </xct:TabViewItem>
             <xct:TabViewItem TabIndex="1" Text="Món đã gọi" TextColor="White" FontSize="20" TextColorSelected="Orange"
