--- a/DemoApp/Views/Popup/OderPage.xaml
+++ b/DemoApp/Views/Popup/OderPage.xaml
@@ -46,12 +46,12 @@
                     <CollectionView Grid.Row="1" ItemsSource="{Binding Ordering}" BackgroundColor="White">
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
-                                <Grid ColumnDefinitions="6*,1*,1.5*" BackgroundColor="Black" Padding="0,20"
+                                <Grid ColumnDefinitions="6*,2.5*,1.5*" BackgroundColor="Black" Padding="0,20"
                                       VerticalOptions="Start">
                                     <Label Text="{Binding Tittle}" Style="{StaticResource Title}"/>
                                     <!--<Label Grid.Column="1" Text="{Binding SoLuong}" Style="{StaticResource Title}"/>-->
-                                    <controls:StepperControl Grid.Column="1" Value="{Binding SoLuong}" TapEvent="StepperControl_TapEvent"
-                                    TextColorValue="AliceBlue"/>
+                                    <controls:StepperControl Grid.Column="1" Value="{Binding SoLuong}" TapEvent="StepperControl_TapEvent" FontSizeValue="30"
+                                                             TextColorValue="AliceBlue" HorizontalOptions="Center"/>
                                     <Label Text="{Binding Price}" Style="{StaticResource Title}" Grid.Column="2"/>
                                 </Grid>
                             </DataTemplate>
