--- a/DemoApp/MainPage.xaml
+++ b/DemoApp/MainPage.xaml
@@ -42,7 +42,7 @@
         <Grid ColumnDefinitions="350,*" ColumnSpacing="10"
           BackgroundColor="White" HorizontalOptions="Fill" VerticalOptions="Fill">
             <Grid RowDefinitions="Auto,*" RowSpacing="0" BackgroundColor="LightGoldenrodYellow">
-                <Image Grid.Row="0" Source="{markupextension:EmbeddedImageResource thuonghieugogihouse.png}" HeightRequest="100" HorizontalOptions="Fill" Aspect="AspectFill"/>
+                <Image Grid.Row="0" Source="{markupextension:EmbeddedImageResource thuonghieugogihouse.png}" HeightRequest="200" HorizontalOptions="Fill" Aspect="AspectFill"/>
                 <ScrollView Grid.Row="1" x:Name="controlScroll" VerticalOptions="Fill" BackgroundColor="#aeaeae">
                     <StackLayout x:Name="NameMenu" VerticalOptions="Fill" > <!--BindableLayout.ItemsSource="{Binding MMain}"-->
                         <!--<BindableLayout.ItemTemplate>
@@ -80,7 +80,7 @@
                     </CollectionView.ItemsLayout>
                 </CollectionView>
                 <Grid VerticalOptions="End" ColumnSpacing="0" HorizontalOptions="End" ColumnDefinitions="*,1,*"
-                  Grid.Row="1" WidthRequest="500" Margin="0,20" BackgroundColor="Orange">
+                  Grid.Row="1" WidthRequest="500" BackgroundColor="Orange" HeightRequest="80">
                     <Label VerticalOptions="Fill" HorizontalOptions="Fill" BackgroundColor="Transparent" HorizontalTextAlignment="Center"
                        VerticalTextAlignment="Center" TextColor="White" Grid.Column="0" FontSize="20">
                         <Label.FormattedText>
