--- a/DemoApp/Views/Popup/OderPage.xaml
+++ b/DemoApp/Views/Popup/OderPage.xaml
@@ -27,8 +27,10 @@
             <Style TargetType="Button" x:Key="ButtonStyle">
                 <Setter Property="BackgroundColor" Value="Transparent"/>
                 <Setter Property="TextTransform" Value="None"/>
-                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="FontSize" Value="30"/>
                 <Setter Property="TextColor" Value="White"/>
+                <Setter Property="CornerRadius" Value="0"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
             </Style>
         </ResourceDictionary>
     </pages:PopupPage.Resources>
@@ -38,7 +40,7 @@
             <xct:TabViewItem TabIndex="0" Text="Món đang gọi" TextColor="White" FontSize="20" TextColorSelected="Orange"
                             FontAttributes="Bold" FontAttributesSelected="Bold" FontSizeSelected="20">
                 <Grid RowDefinitions="Auto,*,Auto" Padding="0,48,0,0" BackgroundColor="Black" RowSpacing="0">
-                    <Grid ColumnDefinitions="6*,1*,1.5*" BackgroundColor="Black" Padding="0,20" VerticalOptions="Start">
+                    <Grid ColumnDefinitions="6*,2.5*,1.5*" BackgroundColor="Black" Padding="0,20" VerticalOptions="Start">
                         <Label Text="Tên món" Style="{StaticResource Title}"/>
                         <Label Text="S/L" Style="{StaticResource Title}"  Grid.Column="1"/>
                         <Label Text="Đơn giá" Style="{StaticResource Title}" Grid.Column="2"/>
@@ -51,15 +53,15 @@
                                     <Label Text="{Binding Tittle}" Style="{StaticResource Title}"/>
                                     <!--<Label Grid.Column="1" Text="{Binding SoLuong}" Style="{StaticResource Title}"/>-->
                                     <controls:StepperControl Grid.Column="1" Value="{Binding SoLuong}" TapEvent="StepperControl_TapEvent" FontSizeValue="30"
-                                                             TextColorValue="AliceBlue" HorizontalOptions="Center"/>
+                                                             TextColorValue="AliceBlue" HorizontalOptions="Center" BindingContext="{Binding .}"/>
                                     <Label Text="{Binding Price}" Style="{StaticResource Title}" Grid.Column="2"/>
                                 </Grid>
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
                     </CollectionView>
-                    <Grid HeightRequest="80" VerticalOptions="End" Grid.Row="1">
-                        <Button Style="{StaticResource ButtonStyle}" Text="Huy" BackgroundColor="Red" Command="{Binding HuyMonCmd}"/>
-                        <Button Style="{StaticResource ButtonStyle}" Text="Xac Nhan" BackgroundColor="Green" Command="{Binding XacNhanMonCmd}" Grid.Column="1"/>
+                    <Grid HeightRequest="80" VerticalOptions="End" Grid.Row="1" ColumnSpacing="0">
+                        <Button Style="{StaticResource ButtonStyle}" Text="Huỷ" BackgroundColor="Red" Command="{Binding HuyMonCmd}" />
+                        <Button Style="{StaticResource ButtonStyle}" Text="Xác nhận" BackgroundColor="Green" Command="{Binding XacNhanMonCmd}" Grid.Column="1"/>
                     </Grid>
                 </Grid>
             </xct:TabViewItem>
