--- a/DemoApp/App.xaml
+++ b/DemoApp/App.xaml
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:fonts="clr-namespace:DemoApp.Resources.Fonts"
              x:Class="DemoApp.App">
     <Application.Resources>
-
+        <Style TargetType="Label" x:Key="Title">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontFamily" Value="{x:Static fonts:FontAssembly.NunitoSemiBold}"/>
+            <Setter Property="TextColor" Value="#63686E"/>
+        </Style>
     </Application.Resources>
 </Application>
