--- a/DemoApp/MainPage.xaml
+++ b/DemoApp/MainPage.xaml
@@ -18,7 +18,7 @@
             </DataTemplate>-->
 
             <DataTemplate x:Key="collection">
-                <Grid BackgroundColor="Black" HeightRequest="500" ColumnDefinitions="6*,4*">
+                <Grid  HeightRequest="300" ColumnDefinitions="6*,4*" ColumnSpacing="0">
                     <!--<Image Source="{Binding HinhMonAn}" Aspect="AspectFit" HorizontalOptions="Fill" HeightRequest="300"/>-->
                     <!--<StackLayout HorizontalOptions="Fill" VerticalOptions="Fill" BackgroundColor="Aqua">
                         <Label TextColor="White" FontSize="30" Text="Chua Co Hinh" FontAttributes="Bold"
@@ -26,12 +26,19 @@
                                HorizontalOptions="Fill"/>
                     </StackLayout>-->
                     <Image Source="{markupextension:EmbeddedImageResource noproduct.png}" Aspect="AspectFill"/>
-                    <StackLayout Grid.Column="1" VerticalOptions="Fill" Padding="10">
+                    <StackLayout Grid.Column="1" VerticalOptions="Fill" Padding="10" BackgroundColor="#EEEBDD">
                         <Label Text="{Binding Tittle}" TextColor="White" FontSize="30" FontAttributes="Bold"/>
-                        <Label Text="{Binding Price}" TextColor="White" FontSize="20" FontAttributes="Bold"/>
+                        <Label TextColor="White" FontSize="20" FontAttributes="Bold">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span Text="{Binding Price}"/>
+                                    <Span Text=" vnd"/>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
                     </StackLayout>
                     <Button Text="+" HeightRequest="50" WidthRequest="50" VerticalOptions="End" HorizontalOptions="End" Grid.Column="1" Margin="20"
-                            CornerRadius="25" BackgroundColor="#eaeaea" TextColor="Black" Command="{Binding Source={Reference currentPage},Path=BindingContext.ThemMonGoiCmd}"
+                            CornerRadius="25" BackgroundColor="#630000" TextColor="White" Command="{Binding Source={Reference currentPage},Path=BindingContext.ThemMonGoiCmd}"
                             CommandParameter="{Binding .}" FontSize="30"/>
                 </Grid>
             </DataTemplate>
@@ -43,7 +50,7 @@
           BackgroundColor="White" HorizontalOptions="Fill" VerticalOptions="Fill">
             <Grid RowDefinitions="Auto,*" RowSpacing="0" BackgroundColor="LightGoldenrodYellow">
                 <Image Grid.Row="0" Source="{markupextension:EmbeddedImageResource thuonghieugogihouse.png}" HeightRequest="200" HorizontalOptions="Fill" Aspect="AspectFill"/>
-                <ScrollView Grid.Row="1" x:Name="controlScroll" VerticalOptions="Fill" BackgroundColor="#aeaeae">
+                <ScrollView Grid.Row="1" x:Name="controlScroll" VerticalOptions="Fill" BackgroundColor="#EEEBDD">
                     <StackLayout x:Name="NameMenu" VerticalOptions="Fill" > <!--BindableLayout.ItemsSource="{Binding MMain}"-->
                         <!--<BindableLayout.ItemTemplate>
                             <DataTemplate>
@@ -64,12 +71,12 @@
             </Grid>
 
             <Grid Grid.Column="1" RowDefinitions="Auto,*" RowSpacing="0">
-                <StackLayout HorizontalOptions="Fill" BackgroundColor="Black" HeightRequest="80" Padding="20">
+                <StackLayout x:Name="Startus" HorizontalOptions="Fill" BackgroundColor="Black" HeightRequest="80" Padding="20">
                     <Frame HorizontalOptions="Start" VerticalOptions="Center" Padding="20,10"
                        BackgroundColor="#eaeaea" CornerRadius="10">
                         <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                             <BoxView HeightRequest="50" WidthRequest="50" CornerRadius="25" Color="Yellow"/>
-                            <Label Text="Nhan vien abcef" VerticalOptions="Center"/>
+                            <Label x:Name="txtName" Text="Nhan vien abcef" VerticalOptions="Center" FontSize="20" FontAttributes="Bold"/>
                         </StackLayout>
                     </Frame>
                 </StackLayout>
